# elfinasi

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  zzz_setup.cfg
data/: 20210831_060400_061000_elfina_110_km_mapped_state.csv  20210831_060400_061000_elfinb_110_km_mapped_state.csv  20210928_044600_045200_elfina_110_km_mapped_state.csv  20211004_020300_020800_elfina_110_km_mapped_state.csv  20220904_0417_elfina_110km_footprint.csv  20220904_041800_042300_elfina_110_km_mapped_state.csv  20220904_themis_asi_inversion.csv  20220904noaa18mep.txt  20250331-19-15-supermag.csv
data/20220904_themis_asi_inversion/: ASIdataCSV0.csv  ASIdataCSV10.csv  ASIdataCSV100.csv  ASIdataCSV15.csv  ASIdataCSV20.csv  ASIdataCSV25.csv  ASIdataCSV30.csv  ASIdataCSV35.csv  ASIdataCSV40.csv  ASIdataCSV45.csv  ASIdataCSV5.csv  ASIdataCSV50.csv  ASIdataCSV55.csv  ASIdataCSV60.csv  ASIdataCSV65.csv  ASIdataCSV70.csv  ASIdataCSV75.csv  ASIdataCSV80.csv  ASIdataCSV85.csv  ASIdataCSV90.csv  ASIdataCSV95.csv
docs/: conf.py  index.rst
src/20220305_psa_study/: elfin_lamp.ipynb  test_elfin_cdf.py
src/20220904_substorm_study/: fig1.py  map.py  movie_s1.py  movie_s2_0420.py
src/20220904_substorm_study/misc/: 20220904_elfin_energy_flux.ipynb  (+1 more)
src/20240904_substorm_study/: 20220904_0335_trex_elfinb_conjunction.py  20220904_0425_trex_poes_conjunction.ipynb  __init__.py  fig1.py  fig2.py  fig3.py  fig3_0335.py  fig3_0420.py  fig3_v2.py  movie_s2.py  movie_s2_0335.py
src/eflux/: eflux.py
src/elfinasi/: __init__.py  elfin.py  poes.py  validation.py
test/: test_epd.py  test_pad.py
(+7 files in other folders)
